# cpp-webserver-adapter

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  conanfile.py  conanfile.txt  vs2022.conanprofile
.github/workflows/: archive-docs.yml
WebServerAdapterInterface/: IClient.h  IClientFactory.h  ISecuredServer.h  IServer.h  IServerFactory.h  IService.h  IWebService.h  conanfile.py
WebServerAdapterInterface/Model/: CORSConfiguration.h  CORSConfiguration.inl  Configuration.h  Configuration.inl  Headers.h  Reply.h  Reply.inl  Request.h  Request.inl  RequestHeaders.h  RequestHeaders.inl  RequestMethod.h  RequestQueryStrings.h  RequestQueryStrings.inl  SecuredServerCredentials.h  SecuredServerCredentials.inl  SecurityConfiguration.h  SecurityConfiguration.inl
WebServerAdapterTestUtilities/: CMakeLists.txt  README.md  conanfile.py  stdafx.h
WebServerAdapterTestUtilities/Builders/: CORSConfigurationBuilder.cpp  CORSConfigurationBuilder.h  ReplyBuilder.cpp  ReplyBuilder.h  RequestBuilder.cpp  RequestBuilder.h  RequestQueryStringsBuilder.cpp  RequestQueryStringsBuilder.h
WebServerAdapterTestUtilities/Comparators/: CORSConfigurationComparator.cpp  ConfigurationComparator.cpp  ReplyComparator.cpp  RequestComparator.cpp  RequestHeadersComparator.cpp  RequestQueryStringsComparator.cpp  SecuredServerCredentialsComparator.cpp  SecurityConfigurationComparator.cpp  ServerConfigurationComparator.cpp
WebServerAdapterTestUtilities/Helpers/: HttpsClient.cpp  HttpsClient.h
WebServerAdapterTestUtilities/Mocks/: MockClient.cpp  MockClient.h  MockClientFactory.cpp  MockClientFactory.h  MockSecuredServer.cpp  MockSecuredServer.h  MockServer.cpp  MockServer.h  MockServerFactory.cpp  MockServerFactory.h  MockService.cpp  MockService.h  MockWebService.cpp  MockWebService.h
WebServerAdapterTestUtilities/Stubs/: StubClient.cpp  StubClient.h  StubService.cpp  StubService.h  StubWebService.cpp  StubWebService.h
ci/: build_docs.sh  deploy.sh
ci/pipelines/: Build.jenkinsfile  NewtonDebug.properties  NewtonRelease.properties  Release.jenkinsfile
ci/scripts/: build_docs.sh
test_package/: CMakeLists.txt  WebServerAdapterExample.cpp  conanfile.py
